# score_baselibs

./: .bazelrc  .clangd  .pre-commit-config.yaml  01_build.sh  02_test.sh  BUILD  LEARNING_NUGGETS.md  MODULE.bazel
.devcontainer/: devcontainer.json
.github/workflows/: build_and_test_host_gcc12.yml  coverage_report.yml  lockfile.yml
bazel/: unit_tests.bzl
docs/: index.rst
docs/log_cpp/docs/: index.rst
score/bitmanipulation/: BUILD
score/containers/: BUILD  intrusive_list_test.cpp
score/containers/test/: allocator_test_type_helpers.cpp  allocator_test_type_helpers.h
score/filesystem/details/: standard_filesystem.cpp  standard_filesystem.h
score/flatbuffers/: BUILD  buffer_version_info.hpp  error.hpp  i_version_reader.hpp  version_reader.hpp
score/flatbuffers/bazel/: BUILD  codegen.bzl  inject_buffer_version.py  tools.bzl
score/flatbuffers/common/: BUILD.bazel  buffer_version.fbs  buffer_version_envelope.fbs
score/flatbuffers/details/: buffer_version.cpp  error.cpp  flatfbuffer_allocator_test.cpp  gcov_dump_on_abort.hpp  load_buffer_internal.hpp  version_reader.cpp
score/flatbuffers/test/: version_reader_test.cpp
score/json/: BUILD  json_writer.cpp
score/json/examples/: BUILD
score/memory/: BUILD  split_string_view.h
score/memory/shared/: BUILD  managed_memory_resource.h  managed_memory_resource_test.cpp  map_test.cpp  memory_resource_proxy_test.cpp  pointer_arithmetic_util_test.cpp  polymorphic_offset_ptr_allocator.h  polymorphic_offset_ptr_allocator_test.cpp  shared_memory_factory_impl.cpp  shared_memory_factory_test.cpp  shared_memory_resource.cpp  shared_memory_resource_allocate_test.cpp  shared_memory_test_resources.cpp  (+5 more)
score/network/: BUILD  netutils_impl_qnx.cpp
score/os/: BUILD
score/utils/: BUILD
(+149 files in other folders)
