# *******************************************************************************
# Copyright (c) 2026 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("//score/flatbuffers/bazel:codegen.bzl", "generate_cpp")

exports_files(
    [
        "buffer_version.fbs",
    ],
    visibility = ["//visibility:public"],
)

# Generate C++ header from the BufferVersion schema
generate_cpp(
    name = "gen_buffer_version_h",
    output = "buffer_version_generated.h",
    schema = "buffer_version.fbs",
)

# Generate C++ header from the BufferVersionEnvelope schema (includes buffer_version.fbs)
generate_cpp(
    name = "gen_buffer_version_envelope_h",
    includes = [":buffer_version.fbs"],
    output = "buffer_version_envelope_generated.h",
    schema = "buffer_version_envelope.fbs",
)

# C++ library exposing the generated envelope and version headers
cc_library(
    name = "buffer_version_envelope",
    hdrs = [
        ":gen_buffer_version_envelope_h",
        ":gen_buffer_version_h",
    ],
    include_prefix = "score/flatbuffers/common",
    visibility = ["//score/flatbuffers:__pkg__"],
    deps = [
        "//score/flatbuffers:flatbufferscpp",
    ],
)
